Fix page breaks inside gigs.
Fixed page breaks appearing inside of gig listings. The breaks were
separating places of employment and job titles from descriptions
and highlights.

--- a/assets/style.sass
+++ b/assets/style.sass
@@ -75,6 +75,9 @@ section
 .category
   margin-left: 1in
 
+.gig
+  break-inside: avoid
+
 .position
   font-weight: $semibold-weight
 
@@ -104,7 +107,7 @@ section
     text-align: left
 
 .block
-  page-break-inside: avoid
+  break-inside: avoid
 
 .degree
   .field
